# piney

./: .gitignore  Cargo.toml  README.md
doc/: android_file_system.md  file_uri.rs  lib.rs
doc/@tauri-apps/: plugin-fs
frontend/: package-lock.json  package.json
frontend/src/lib/ai/: service.ts  templates.ts  types.ts
frontend/src/lib/components/: app-sidebar.svelte
frontend/src/lib/components/presets/: PipiStudyTab.svelte  StitchModal.svelte
frontend/src/lib/stores/: backupExport.ts
frontend/src/lib/utils/: download.ts
frontend/src/routes/(app)/characters/: +page.svelte
frontend/src/routes/(app)/gallery/: +page.svelte
frontend/src/routes/(app)/presets/: +page.svelte
frontend/src/routes/(app)/presets/[id]/: +page.svelte
frontend/src/routes/(app)/settings/: +page.svelte
frontend/src/routes/(app)/system/backup/: +page.svelte
frontend/src/routes/(app)/worldinfo/: +page.svelte
migration/src/: lib.rs  m000003_create_presets.rs
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: commands.rs  lib.rs
src/api/: ai.rs  mod.rs  presets.rs
src/entities/: mod.rs  preset.rs
tests/: test_version_extraction.rs
