[package]
name = "piney-app"
version = "0.1.0"
edition = "2021"
description = "Piney - SillyTavern 生态的全能角色卡工作站"
authors = ["Piney Team"]
license = "MIT"
repository = "https://github.com/piney/piney"

[lib]
name = "piney_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1.41", features = ["full"] }
anyhow = "1.0"
axum = "0.8"
piney = { path = ".." }
migration = { path = "../migration" }
chrono = "0.4"
tauri-plugin-fs = "2"
tauri-plugin-dialog = "2"
tauri-plugin-process = "2"
reqwest = { version = "0.12", default-features = false, features = ["stream", "rustls-tls"] }
futures-util = "0.3"
uuid = { version = "1", features = ["v4"] }
tauri-plugin-android-fs = "25"
